<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="12dp">
        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/echoostation_placeholder_album_3x"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/m_plus_rounded_1c_extrabold"
        android:text="@string/title"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        android:padding="2dp"/>

    <TextView
        android:id="@+id/music_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/m_plus_rounded_1c_medium"
        android:text="@string/artist"
        android:textSize="18sp"
        android:textColor="@color/colorText"/>

    <!-- Boutons -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/ic_repeat"
            android:src="@drawable/round_repeat_24"
            app:tint="@color/accentColor"/>

        <ImageView
            android:id="@+id/prev_button"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:contentDescription="@string/ic_previous"
            android:src="@drawable/round_skip_previous_24"
            app:tint="@color/accentColor"/>

        <androidx.cardview.widget.CardView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="64dp"
            android:layout_marginHorizontal="24dp">
            <ImageView
                android:id="@+id/play_pause_button"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ic_play_pause"
                android:src="@drawable/round_play_arrow_24"
                app:tint="@color/accentColor" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:contentDescription="@string/ic_next"
            android:src="@drawable/round_skip_next_24"
            app:tint="@color/accentColor" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/ic_shuffle"
            android:src="@drawable/round_shuffle_24"
            app:tint="@color/accentColor" />
    </LinearLayout>


</LinearLayout>
