<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="2dp"
    android:paddingVertical="10dp"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">
    <androidx.cardview.widget.CardView
        android:id="@+id/music_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        app:cardCornerRadius="4dp">
        <ImageView
            android:id="@+id/image_cover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/echoostation_placeholder_music_3x"
            android:contentDescription="@string/album_cover"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/music_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_toEndOf="@id/music_cover"
        android:layout_toStartOf="@id/music_duration"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:paddingTop="3dp"
        android:text="@string/title"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/music_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_toEndOf="@id/music_cover"
        android:layout_alignBottom="@id/music_cover"
        android:layout_toStartOf="@id/music_duration"
        android:paddingBottom="3dp"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:text="@string/artist"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/music_duration"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_toStartOf="@id/item_menu_button"
        android:paddingBottom="3dp"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:text="@string/time_music"
        android:textSize="14sp"/>

    <ImageButton
        android:id="@+id/item_menu_button"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        app:tint="@color/colorText"
        android:src="@drawable/ic_item__menu"
        android:background="@color/trueTransparenceColor"
        android:contentDescription="@string/ic_menu_dots"/>

</RelativeLayout>