<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/authorization_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/intro_text_1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:text="@string/intro_text_1"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:lineSpacingExtra="-10sp"/>
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/intro_text_1"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/intro_text_2"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:lineSpacingExtra="-5sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/intro_text_1"
            android:adjustViewBounds="true"
            android:maxWidth="160dp"
            android:maxHeight="160dp"
            android:scaleType="fitCenter"
            android:layout_marginStart="3dp"
            android:src="@drawable/echoostation_icone_foreground_3x"
            android:contentDescription="@string/logo_desciption"/>

        <RelativeLayout
            android:id="@+id/button_container"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/ibm_plex_sans_bold"
                android:text="@string/confirm_authorization"
                android:backgroundTint="@color/accentColor"/>
            <Button
                android:id="@+id/quit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_button"
                android:fontFamily="@font/ibm_plex_sans_bold"
                android:text="@string/quit_app"
                android:textColor="@color/accentColor"
                android:backgroundTint="@color/transparenceColor"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <!-- Toolbar en haut -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            app:title="@string/app_name"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorSecondary"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/scan_progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@color/colorSecondary">

            <ProgressBar
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="?android:attr/progressBarStyleSmall"
                android:indeterminate="true"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/scan_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_sans_medium_italic"
                android:text="@string/scanning_indicator"
                android:textColor="@color/colorText"
                android:textSize="18sp"/>
        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/scan_progress_container"
            android:layout_above="@id/bottom_nav_menu">
            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/player_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:background="@android:color/white"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <TextView
                    android:id="@+id/player_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album"
                    android:textSize="14sp"
                    android:layout_marginVertical="4dp"
                    android:visibility="gone"/>

                <!-- Image du player (mini et full) -->
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_marginTop="4dp">
                    <ImageView
                        android:id="@+id/player_cover"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/echoostation_placeholder_album_3x" />
                </androidx.cardview.widget.CardView>

                <!-- Titre et artiste -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player_title"
                        android:layout_width="192dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/title"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/player_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/artist"
                        android:textColor="#888888" />
                </LinearLayout>


                <!-- Boutons de contrôle (toujours visibles) -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageButton
                        android:id="@+id/btn_repeat"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/ic_repeat"
                        android:src="@drawable/round_repeat_24"
                        android:visibility="gone"/>

                    <ImageButton
                        android:id="@+id/btn_prev"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/ic_previous"
                        android:src="@drawable/round_skip_previous_24"/>

                    <ImageButton
                        android:id="@+id/btn_play"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/ic_play_pause"
                        android:src="@drawable/round_play_arrow_24" />

                    <ImageButton
                        android:id="@+id/btn_next"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/ic_next"
                        android:src="@drawable/round_skip_next_24" />

                    <ImageButton
                        android:id="@+id/btn_shuffle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/ic_shuffle"
                        android:src="@drawable/round_shuffle_24"
                        android:visibility="gone"/>
                </LinearLayout>

                <!-- Contenu supplémentaire visible seulement en full player -->
                <LinearLayout
                    android:id="@+id/full_content"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:visibility="gone">

                    <SeekBar
                        android:id="@+id/player_seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="1000"
                        android:progressTint="@color/accentColor"
                        android:thumbTint="@color/accentColor"/>
                    <RelativeLayout
                        android:layout_width="320dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/player_current_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:fontFamily="@font/ibm_plex_sans_regular"
                            android:text="00:00"/>
                        <TextView
                            android:id="@+id/player_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="@font/ibm_plex_sans_regular"
                            android:text="00:00"/>
                    </RelativeLayout>

                    <!-- Exemple : waveform, paroles, background etc -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contenu Full Player"
                        android:textSize="16sp"
                        android:textColor="#444444"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <!-- Bottom Navigation collée en bas -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            style="@style/CustomBottomNavigation"
            android:id="@+id/bottom_nav_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/main_menu"
            app:itemIconTint="@color/nav_item_color"
            app:itemTextColor="@color/nav_item_color"
            android:visibility="visible"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>