<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bottom_menu_shape">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        app:tint="@color/accentColor"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:contentDescription="@string/ic_remove_bottom_sheet"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/bottom_sheet_layout_title"
            android:padding="8dp"
            android:textColor="@color/accentColor"
            android:layout_marginStart="12dp"
            android:textSize="22sp"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_baseline_close_24"
            app:tint="@color/colorText"
            android:layout_marginStart="10dp"
            android:id="@+id/cancelButton"
            android:contentDescription="@string/ic_close_bottom_sheet"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>